# mach

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
mach/: Cargo.toml
mach/src/: file.rs  hotkey_listener.rs  main.rs  search.rs  ui.rs  window.rs
mach/ui/: app-window.slint
src/: config.rs  hotkey_listener.rs  main.rs  search.rs  ui.rs  window.rs
ui/: app-window.slint
