[package]
name = "mach-keys"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Dioneda"]
description = "A simple cross-platform Macro and Command GUI Helper"
repository = "https://github.com/dioeos/mach"
keywords = ["slint", "gui", "keybinds", "macros"]
license = "MIT"

[dependencies]
slint = { version = "1.8.0", features = ["backend-winit", "renderer-femtovg"] }
i-slint-backend-winit = "1.8.0"
winit = "0.30"
global-hotkey = "0.7"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
fuzzy-matcher = "0.3.7"

[build-dependencies]
slint-build = "1.8.0"
